# opencv-c-

./: CMakeLists.txt  README.md  main.cpp
